--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc && node ./build/index.js",
+    "build:watch": "tsc && node ./build/index.js watch",
     "test": "vitest"
   },
   "keywords": [],
@@ -16,7 +17,9 @@
     "vitest": "^0.25.2"
   },
   "devDependencies": {
+    "fs-extra": "^11.2.0",
     "happy-dom": "^7.7.0",
+    "node-watch": "^0.7.4",
     "vite": "^3.2.4"
   }
 }
