--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "esbuild": "^0.15.14",
-    "typescript": "^4.9.3",
-    "vitest": "^0.25.2"
+    "typescript": "^4.9.3"
   },
   "devDependencies": {
     "fs-extra": "^11.2.0",
     "happy-dom": "^7.7.0",
     "node-watch": "^0.7.4",
-    "vite": "^3.2.4"
+    "vite": "^5.0.10",
+    "vitest": "^1.1.0"
   }
 }
